# hri-pipeline

./: .env  .gitignore  .gitmodules  AUTHORS.txt  README.md  docker-compose.yml  download_data.sh
compose/detection_pipe/: dockerfile  test_obj_det_dev_grasp_predictor.py  test_obj_det_dev_unknown_objects.py
compose/r_melodic/: Dockerfile
compose/r_noetic/: Dockerfile
config/: params_tiago.yaml  params_tiago_v2.yaml  tiago.rviz
src/input_handling/: CMakeLists.txt  package.xml
src/input_handling/config/: input_handling_params.yaml
src/input_handling/launch/: input_handling.launch
src/input_handling/msg/: SegmentedSpeech.msg
src/input_handling/src/: adv_mic_publisher_node.py  deictic_buffer_node.py  mic_analyzer_node.py  mic_analyzer_node_old.py  mic_publisher_node.py
src/r_melodic_ws/bridge_noetic_melodic/: CMakeLists.txt  bridge_noetic_melodic.py  move_it_simple.py  move_server.py  package.xml  planning_test.py
src/r_ros2_ws/teleop_gesture_toolbox/gesture_detector/gesture_detector/: __init__.py
src/r_ros2_ws/teleop_gesture_toolbox/gesture_detector/gesture_detector/utils/: loading.py
src/r_ros2_ws/teleop_gesture_toolbox/natural_language_processing/natural_language_processing/: nl_node.py
